# wallet-cli

./: Makefile  README.rst  pyproject.toml  tox.ini
.github/workflows/: main.yml  pull_requests.yml
src/wallet/: app.py
src/wallet/cli/: __init__.py  accounts.py
src/wallet/core/entities/: __init__.py  abc.py  accounts.py
src/wallet/core/gateways/: __init__.py  accounts.py
src/wallet/core/services/: accounts.py
src/wallet/gateways/: __init__.py  accounts.py
tests/: conftest.py
tests/cli/accounts/: test_show.py
tests/core/services/accounts/: test_get_accounts.py
tests/gateways/: conftest.py
tests/gateways/accounts/: test_fetch.py
