[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wallet"
version = "0.1.0"
description = "Personal finance tool"
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
license = "MIT"
packages = [
    { include = "wallet", from = "src" }
]

[tool.poetry.dependencies]
click = "^8.0.1"
config = {git = "https://github.com/clayman083/config.git", rev = "v0.3.0"}
python = "^3.9"
structlog = "^21.1.0"
requests = "^2.26.0"
rich = "^10.9.0"

[tool.poetry.dev-dependencies]
black = "19.10b0"
coverage = "5.5"
flake8 = "3.9.2"
flake8-bugbear = "21.4.3"
flake8-builtins-unleashed = "1.3.1"
flake8-comprehensions = "3.5.0"
flake8-import-order = "0.18.1"
flake8-print = "4.0.0"
ipython = "7.25.0"
mypy = "0.910"
pytest = "6.2.4"
pytest-cov = "2.12.1"
pytest-faker = "2.0.0"
pytest-flake8 = "1.0.7"
pytest-mock = "3.6.1"
pytest-mypy = "0.8.0"
pytest-xdist = {extras = ["psutil"], version = "2.3.0"}
rope = "0.19.0"
types-click = "7.1.2"

[tool.poetry.scripts]
wallet = 'wallet.cli:main'
